// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typeConfigs > should provide type configs 1`] = `
Array [
  Object {
    "allows": [Function],
    "component": [Function],
    "description": " ** Unsupported ** ",
    "name": "Missing",
    "type": "missing",
  },
  Object {
    "advanced": 1,
    "allows": [Function],
    "component": [Function],
    "description": "Send the contact a message",
    "form": [Function],
    "name": "Send Message",
    "type": "send_msg",
  },
  Object {
    "allows": [Function],
    "component": [Function],
<<<<<<< HEAD
    "description": "Send somebody else a message",
    "form": [Function],
    "formHelper": SendBroadcastFormHelper {},
    "name": "Send Broadcast",
    "type": "send_broadcast",
=======
    "description": "Label the incoming message",
    "form": [Function],
    "name": "Add Labels",
    "type": "add_input_labels",
>>>>>>> master
  },
  Object {
    "allows": [Function],
    "component": [Function],
<<<<<<< HEAD
    "description": "Add them to a group",
=======
    "description": "Add the contact to a group",
>>>>>>> master
    "form": [Function],
    "name": "Add to Group",
    "type": "add_contact_groups",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Remove the contact from a group",
    "form": [Function],
    "name": "Remove from Group",
    "type": "remove_contact_groups",
  },
  Object {
    "aliases": Array [
      "set_contact_property",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "name": "Send Email",
    "type": "send_email",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "name": "Save Flow Result",
    "type": "set_run_result",
  },
  Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  Object {
    "aliases": Array [
      "subflow",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Run another flow",
    "form": [Function],
    "name": "Run Flow",
    "type": "start_flow",
  },
  Object {
    "advanced": 2,
    "allows": [Function],
    "description": "Split by a custom expression",
    "form": [Function],
    "name": "Split by Expression",
    "type": "split_by_expression",
  },
  Object {
    "allows": [Function],
    "description": "Split by group membership",
    "form": [Function],
    "name": "Split by Group Membership",
    "type": "split_by_groups",
  },
  Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "allows": [Function],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
]
`;

exports[`typeConfigs > should provide type configs 2`] = `
Array [
  Object {
    "allows": [Function],
    "component": [Function],
    "description": " ** Unsupported ** ",
    "name": "Missing",
    "type": "missing",
  },
  Object {
    "advanced": 1,
    "allows": [Function],
    "component": [Function],
    "description": "Send the contact a message",
    "form": [Function],
    "name": "Send Message",
    "type": "send_msg",
  },
  Object {
    "allows": [Function],
    "component": [Function],
<<<<<<< HEAD
    "description": "Send somebody else a message",
    "form": [Function],
    "formHelper": SendBroadcastFormHelper {},
    "name": "Send Broadcast",
    "type": "send_broadcast",
=======
    "description": "Label the incoming message",
    "form": [Function],
    "name": "Add Labels",
    "type": "add_input_labels",
>>>>>>> master
  },
  Object {
    "allows": [Function],
    "component": [Function],
<<<<<<< HEAD
    "description": "Add them to a group",
=======
    "description": "Add the contact to a group",
>>>>>>> master
    "form": [Function],
    "name": "Add to Group",
    "type": "add_contact_groups",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Remove the contact from a group",
    "form": [Function],
    "name": "Remove from Group",
    "type": "remove_contact_groups",
  },
  Object {
    "aliases": Array [
      "set_contact_property",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "name": "Send Email",
    "type": "send_email",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "name": "Save Flow Result",
    "type": "set_run_result",
  },
]
`;

exports[`typeConfigs > should provide type configs 3`] = `
Object {
  "add_contact_groups": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Add the contact to a group",
    "form": [Function],
    "name": "Add to Group",
    "type": "add_contact_groups",
  },
  "add_input_labels": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Label the incoming message",
    "form": [Function],
    "name": "Add Labels",
    "type": "add_input_labels",
  },
  "call_webhook": Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  "missing": Object {
    "allows": [Function],
    "component": [Function],
    "description": " ** Unsupported ** ",
    "name": "Missing",
    "type": "missing",
  },
  "remove_contact_groups": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Remove the contact from a group",
    "form": [Function],
    "name": "Remove from Group",
    "type": "remove_contact_groups",
  },
  "send_broadcast": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Send somebody else a message",
    "form": [Function],
    "formHelper": SendBroadcastFormHelper {},
    "name": "Send Broadcast",
    "type": "send_broadcast",
  },
  "send_email": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "name": "Send Email",
    "type": "send_email",
  },
  "send_msg": Object {
    "advanced": 1,
    "allows": [Function],
    "component": [Function],
    "description": "Send the contact a message",
    "form": [Function],
    "name": "Send Message",
    "type": "send_msg",
  },
  "set_contact_field": Object {
    "aliases": Array [
      "set_contact_property",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  "set_contact_property": Object {
    "aliases": Array [
      "set_contact_property",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  "set_run_result": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "name": "Save Flow Result",
    "type": "set_run_result",
  },
  "split_by_expression": Object {
    "advanced": 2,
    "allows": [Function],
    "description": "Split by a custom expression",
    "form": [Function],
    "name": "Split by Expression",
    "type": "split_by_expression",
  },
  "split_by_groups": Object {
    "allows": [Function],
    "description": "Split by group membership",
    "form": [Function],
    "name": "Split by Group Membership",
    "type": "split_by_groups",
  },
  "start_flow": Object {
    "aliases": Array [
      "subflow",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Run another flow",
    "form": [Function],
    "name": "Run Flow",
    "type": "start_flow",
  },
  "subflow": Object {
    "aliases": Array [
      "subflow",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Run another flow",
    "form": [Function],
    "name": "Run Flow",
    "type": "start_flow",
  },
  "switch": Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "allows": [Function],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
  "wait_for_response": Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "allows": [Function],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
  "webhook": Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
}
`;
